<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#2D2D32"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hello_user"
            android:textColor="#A6A5A5"
            android:textSize="40sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_editor_absoluteX="115dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#A6A5A5"
            android:hint="@string/email"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#A6A5A5"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/repeatInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#A6A5A5"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#A6A5A5"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>